--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"install:all": "npm install && cd client && npm install && cd ../server && npm install",
+		"install:all": "npm install && cd client && npm install",
 		"dev:client": "cd client && npm run dev",
-		"dev:server": "cd server && npm run dev",
-		"dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
+		"dev": "npm run dev:client"
 	},
 	"repository": {
 		"type": "git",
